# aws-s3-encode

./: pyproject.toml
app/app/html/: pyhtml.py
app/app/pycsv/: pycsv.py
app/app/s3/: s3.py
app/in/: pg_catalog_100.csv  pg_catalog_1000.csv  pg_catalog_200.csv  pg_catalog_500.csv
app/render/: pg_catalog_100.html
app/template/: toplist.jinja
